--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,28 @@
+# If you use virtual environment
+venv/
+
+
+# Images / Videos
+*.png
+*.jpg
+*.jpeg
+*.m4a
+*.mkv
+*.mp4
+
+# Directories/hidden files
+.cache/
+logs/
 .DS_Store
-outputs/
+.vscode
+__pycache__
+**/.ipynb_checkpoints/**
 
+# datasets
 data/
-
-datasets/
+data/coco/
+data/mnist_object_detection
+data/original_mnist
+outputs/
+data/VOCdevkit
+notebooks/data
