--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ Cython>=0.28.
 scikit-image
 ujson
 pybind11
-git+https://github.com/NVIDIA/cocoapi.git@v0.6.0#subdirectory=PythonAPI
 pycocotools==2.0.0
 easydict
 omegaconf
@@ -15,3 +14,5 @@ torchvision
 tqdm
 opencv-python
 numpy
+cloudpickle
+tensorboard
